[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/shop/shop.gd" type="Script" id=1]
[ext_resource path="res://scenes/themeMFRG.tres" type="Theme" id=2]
[ext_resource path="res://assets/blender2.79_old/assets/assets_shop_cars/shop.escn" type="PackedScene" id=3]
[ext_resource path="res://assets/blender2.79_old/assets/assets_shop_cars/color_map_shop.png" type="Texture" id=4]
[ext_resource path="res://scenes/golds/golds.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/themeMFRGLabelDark.tres" type="Theme" id=6]
[ext_resource path="res://scenes/specs/ui_specs_shop.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/arrow.png-a4a34ea04551cddb834540c85fb39619.stex"

[sub_resource type="DynamicFont" id=9]
size = 68
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 68
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 68
font_data = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )
metallic = 1.0
metallic_specular = 0.75
transmission_enabled = true
transmission = Color( 0.913725, 0.380392, 0.380392, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 4 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -9.3882, -0.1784, -9.3882, -9.3882, -0.1784, 9.3882, -9.3882, 8.2473, 9.3882, 9.3882, -0.1784, -9.3882, -9.3882, -0.1784, -9.3882, -9.3882, 8.2473, -9.3882, 9.3882, -0.1784, 9.3882, 9.3882, -0.1784, -9.3882, 9.3882, 8.2473, -9.3882, -9.3882, -0.1784, 9.3882, 9.3882, -0.1784, 9.3882, 9.3882, 8.2473, 9.3882, -9.3882, -0.1784, 9.3882, -9.3882, -0.1784, -9.3882, 9.3882, -0.1784, -9.3882, 9.3882, 8.2473, 9.3882, 9.3882, 8.2473, -9.3882, -9.3882, 8.2473, -9.3882, -9.3882, -0.1784, -9.3882, -9.3882, 8.2473, 9.3882, -9.3882, 8.2473, -9.3882, 9.3882, -0.1784, -9.3882, -9.3882, 8.2473, -9.3882, 9.3882, 8.2473, -9.3882, 9.3882, -0.1784, 9.3882, 9.3882, 8.2473, -9.3882, 9.3882, 8.2473, 9.3882, -9.3882, -0.1784, 9.3882, 9.3882, 8.2473, 9.3882, -9.3882, 8.2473, 9.3882, -9.3882, -0.1784, 9.3882, 9.3882, -0.1784, -9.3882, 9.3882, -0.1784, 9.3882, 9.3882, 8.2473, 9.3882, -9.3882, 8.2473, -9.3882, -9.3882, 8.2473, 9.3882 )

[node name="shop" instance=ExtResource( 3 )]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 961.0 ]
}

[node name="Control" parent="." index="0" instance=ExtResource( 7 )]

[node name="HBoxContainer" parent="." index="1" instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

[node name="SELECT_CAR_BUY" type="Label" parent="CanvasLayer" index="0"]
anchor_right = 1.0
margin_bottom = 39.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
text = "L_SHOP_CARS"
align = 1

[node name="Control" type="Control" parent="CanvasLayer" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Control" index="0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.0
margin_top = -40.0
margin_right = -127.0
margin_bottom = 60.0
rect_rotation = 180.0
focus_neighbour_left = NodePath("../ButtonRightShop")
focus_neighbour_bottom = NodePath("../ButtonConfirmShop")
theme = ExtResource( 6 )
icon = SubResource( 7 )

[node name="ButtonLeftShop" type="Button" parent="CanvasLayer/Control" index="1"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = 300.0
margin_bottom = 100.0
rect_rotation = 180.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_left = NodePath("../ButtonRightShop")
focus_neighbour_bottom = NodePath("../ButtonConfirmShop")
theme = ExtResource( 2 )
icon = SubResource( 7 )

[node name="ButtonRightShop" type="Button" parent="CanvasLayer/Control" index="2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
margin_right = -100.0
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_right = NodePath("../ButtonLeftShop")
focus_neighbour_bottom = NodePath("../ButtonConfirmShop")
theme = ExtResource( 2 )
icon = SubResource( 7 )

[node name="ButtonConfirmShop" type="Button" parent="CanvasLayer/Control" index="3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -215.0
margin_top = -83.0
margin_right = 215.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 9 )
text = "B_Buy_Car"

[node name="CAR_ALREYD_GARAGE" type="Label" parent="CanvasLayer" index="2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -29.0
margin_right = 151.5
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "CAR_ALREYD_GARAGE"

[node name="NO_SPACE_HOLLOW" type="Label" parent="CanvasLayer" index="3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -29.0
margin_right = 136.0
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "NO_SPACE_HOLLOW"
align = 1

[node name="CAR_BUIED" type="Label" parent="CanvasLayer" index="4"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -29.0
margin_right = 76.5
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "CAR_BUIED"

[node name="NO_MONEY" type="Label" parent="CanvasLayer" index="5"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -29.0
margin_right = 76.5
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "NO_MONEY"

[node name="TimerWarning" type="Timer" parent="CanvasLayer" index="6"]
wait_time = 8.0
one_shot = true

[node name="Control2" type="Control" parent="CanvasLayer" index="7"]
margin_left = 236.0
margin_top = 260.0
margin_right = 419.0
margin_bottom = 312.0

[node name="LabelPrices" type="Label" parent="CanvasLayer/Control2" index="0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 417.5
margin_top = 590.0
margin_right = 847.5
margin_bottom = 673.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 10 )
text = "dasdasfas"
align = 1
valign = 1

[node name="LabelTitlePrices" type="Label" parent="CanvasLayer/Control2" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 419.5
margin_top = 500.0
margin_right = 845.5
margin_bottom = 583.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 11 )
text = "L_Prices"
align = 1
valign = 1

[node name="Cylinder002" parent="." index="3"]
material/0 = SubResource( 1 )

[node name="SpotLight" type="SpotLight" parent="Cylinder002" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
light_color = Color( 0.937255, 0.92549, 0.0705882, 1 )
shadow_enabled = true
shadow_color = Color( 0.176471, 0.160784, 0.0352941, 1 )
spot_range = 9.259

[node name="Cylinder001" parent="." index="4"]
material/0 = SubResource( 1 )

[node name="SpotLight" type="SpotLight" parent="Cylinder001" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
light_color = Color( 0.937255, 0.92549, 0.0705882, 1 )
shadow_enabled = true
shadow_color = Color( 0.176471, 0.160784, 0.0352941, 1 )
spot_range = 9.259

[node name="Cylinder" parent="." index="5"]
material/0 = SubResource( 1 )

[node name="SpotLight" type="SpotLight" parent="Cylinder" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
light_color = Color( 0.937255, 0.92549, 0.0705882, 1 )
shadow_enabled = true
shadow_color = Color( 0.176471, 0.160784, 0.0352941, 1 )
spot_range = 9.259

[node name="Circle004" parent="." index="6"]
material/0 = SubResource( 2 )

[node name="Circle003" parent="." index="7"]
material/0 = SubResource( 2 )

[node name="Circle002" parent="." index="8"]
material/0 = SubResource( 2 )

[node name="Circle001" parent="." index="9"]
material/0 = SubResource( 2 )

[node name="Circle" parent="." index="10"]
material/0 = SubResource( 3 )

[node name="armario" parent="." index="11"]
material/0 = SubResource( 4 )

[node name="SpotLight" type="SpotLight" parent="." index="12"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.60428, 0 )
shadow_enabled = true
spot_range = 21.054

[node name="Sun002" parent="." index="13"]
visible = false

[node name="Cube001" parent="." index="14"]
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Cube001" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Cube001/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="rot_cam" type="Spatial" parent="." index="15"]

[node name="Camera015" type="Camera" parent="rot_cam" index="0"]
transform = Transform( -0.714007, 0.255656, -0.651793, -5.01999e-07, 0.930948, 0.365151, 0.700138, 0.260721, -0.664704, -8.34656, 5.55503, -8.90285 )
current = true
fov = 49.1343
size = 6.0
near = 0.1

[node name="Camera015" parent="." index="16"]
visible = false

[node name="car_invoker" type="Spatial" parent="." index="17"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.02238, 0 )

[connection signal="pressed" from="CanvasLayer/Control/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonLeftShop" to="." method="_on_ButtonLeftShop_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonRightShop" to="." method="_on_ButtonRightShop_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonConfirmShop" to="." method="_on_ButtonConfirmShop_pressed"]
